# mcp-for-beginners-self-trial

./: .env.example  .gitignore  README.md  pyproject.toml
chatbot/2-with-mcp-single-server/: mcp_chatbot.py
chatbot/3-with-mcp-multi-servers/: mcp_chatbot.py
chatbot/4-with-mcp-add-reources-prompts/: README.md  mcp_chatbot.py  research_server.py  server_config.json
chatbot/without-mcp/: chatbot.py
clients/: httpstreamable.py  stdio.py
concepts/: jsonrpc.py  jsonrpc_non_pydantic.py  jsonrpc_pydantic.py  stateful.py  stateless.py  stdio.py  test_stateful.http
deeplearning-ai-course/: tools.py
deeplearning-ai-course/L5/: mcp_chatbot.py  research_server.py
servers/: httpstreamable.py  stdio.py
