[project]
name = "mcp-for-beginners-self-trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.57.1",
    "arxiv>=2.2.0",
    "asyncio>=3.4.3",
    "fastapi>=0.116.1",
    "mcp[cli]>=1.11.0",
    "nest-asyncio>=1.6.0",
]
